added login and rounting

--- a/frontend/src/index.less
+++ b/frontend/src/index.less
@@ -5,17 +5,37 @@ body {
   max-width: 1280px;
   padding: 0;
   height: 100vh;
-  background-color: #f7f7f2;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  background-color: #f2f0f1;
+  font-family: Helvetica Neue,
+  -apple-system,
+  BlinkMacSystemFont,
+  Segoe UI,
+  Roboto,
+  Oxygen,
+  Ubuntu,
+  Cantarell,
+  Fira Sans,
+  Droid Sans,
+  sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
+.menu-link {
   text-decoration: none;
+  padding: 5px 10px;
   color: #323130;
+}
+
+.menu-link:hover {
+  color: rgb(54, 54, 54);
+  background-color: #f6d5e075;
+}
+
+.active {
+  color: #c72259;
+  font-weight: bold;
+  background-color: #cccbcb6e;
 }
 
 code {
