added campaigns and session

--- a/frontend/src/index.less
+++ b/frontend/src/index.less
@@ -78,3 +78,18 @@ input:focus+label {
 .canvas-border {
   border: 1px solid#6d6b6b2c;
 }
+
+.depth4 {
+  box-shadow: 0 1.6px 3.6px 0 rgba(19, 87, 58, 0.132),
+    0 0.3px 0.9px 0 rgba(183, 151, 74, 0.108)
+}
+
+.depth8 {
+  box-shadow: 0 3.2px 7.2px 0 rgba(0, 0, 0, 0.132),
+    0 0.6px 1.8px 0 rgba(0, 0, 0, 0.108);
+}
+
+.depth16 {
+  box-shadow: 0 6.4px 14.4px 0 rgba(0, 0, 0, 0.132),
+    0 1.2px 3.6px 0 rgba(0, 0, 0, 0.108);
+}
